# mgs-br-dataset

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  adapt_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_background.sh  validate_adapted.py
HTML/: dashboard.html
dataset/: README.md  adaptation-decisions-test.md  adaptation-decisions-train.md  adaptation-decisions.md  sample-MGS-BR.csv  sample-MGS.csv  test-MGS-BR.run.json  train-MGS-BR.run.json
mgsbr/: __init__.py  adapter.py  checkpoint.py  cli.py  datacard.py  parsing.py  prompts.py  providers.py  runtime.py  validate.py
tests/: conftest.py  test_adapter.py  test_checkpoint.py  test_parsing.py  test_validate.py
