[project]
name = "mgsbr"
version = "0.7.0"
description = "Adaptação do dataset MGS (Multi-Grain Stereotypes) para o contexto jurídico-cultural brasileiro"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
